First commited as before_57119_rev1